--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="container">
 				<img src="img/input-onlinepngtools.png">
 				<h1><u>FORTUNE FAVORS THE BOLD</u></h1>
-				<p>Without ALLAH SWT, I am Nothing</p>
+				<p>Without ALLAH Subhanahuwata"alaa, I am Nothing</p>
 			</div>
 		</div>
 
